tests/checker/bad/libdup1.scilla
scilla_version 0

import TestLib1 TestLib1

contract LibDup1 ()
